@@ -7,11 +7,13 @@ setwd(here::here('nimbleAPT'))
 roxygen2::roxygenise()
 
 setwd(here::here())
-devtools::build("nimbleAPT", vignettes=TRUE) # FALSE # Can save time with FALSE
+devtools::build("nimbleAPT", vignettes=FALSE) # TRUE # Can save time with FALSE
 
-devtools::check("nimbleAPT")
+# devtools::check("nimbleAPT")
 
-devtools::install("nimbleAPT", build_vignettes = TRUE) # FALSE
+devtools::install("nimbleAPT", build_vignettes = FALSE) # TRUE
+
+library("nimbleAPT")
 
 help.start()
 
