@@ -4,7 +4,7 @@
 \alias{nimbleAPT}
 \title{nimbleAPT}
 \description{
-A collection of nimble functions for adaptive parallele tempering.
+A collection of nimble functions for adaptive parallel tempering.
 }
 \section{Adaptive parallel tempering (APT) for nimble. Adapted from nimble's MCMC suite to enable APT specific features (i.e. an adaptive temperature ladder).}{
 NA
