@@ -1,3 +1,12 @@
+                            CHANGES IN VERSION 1.0.6 (April 2024)
+USER LEVEL CHANGES
+-- printTemps == TRUE now disables progress bar.
+-- printTemps == TRUE now reports: iteration of current MCMC run; total (over all MCMC runs) iterations used in temperature ladder adaptation; current sizes of mvSamples and mvSamples2; the temperature ladder.
+
+BUG FIXES
+-- thinPrintTemps now functions independantly of thin.
+
+
                             CHANGES IN VERSION 1.0.5 (April 2024)
 
 USER LEVEL CHANGES
